# scc

./: CMakeLists.txt  README.md
emidi_alpha/: CMIDIModule.hpp  COpllDevice.cpp  emidi.vcproj  emidi.vcxproj  emidi.vcxproj.filters  main_sdl.cpp  make.sh
